# yandex-music-streamdeck

./: .gitignore  LICENSE  PRIVACY.md  PRIVACY_RU.md  README.md  README_RU.md
api_for_plugin/: main.py  manager.py  requirements.txt  yandex_api.py
api_for_plugin/utils/: auth.py
api_for_plugin/ynison/: client.py  player.py
api_for_plugin/ynison/models/: base.py  common.py  device.py  messages.py  player_state.py  queue.py  redirect.py  state.py
com.judd1.yandex_music.sdPlugin/: main.py  manifest.json  requirements.txt
com.judd1.yandex_music.sdPlugin/src/: Cargo.toml
com.judd1.yandex_music.sdPlugin/src/actions/: base.py  dislike.py  mixins.py  playpause.py  prev.py  progress.py  volumedown.py  volumeup.py
com.judd1.yandex_music.sdPlugin/src/core/: __init__.py  cdp.py  event_handlers.py  logger.py  pi_communicator.py  registry.py  renderer.py  routing.py  types.py  ynison.py
com.judd1.yandex_music.sdPlugin/src/core/mixins/: task.py
com.judd1.yandex_music.sdPlugin/src/core/renderers/: progress.py
com.judd1.yandex_music.sdPlugin/src/core/schemas/: events.py  js_interop.py  pi.py  settings.py
com.judd1.yandex_music.sdPlugin/src/core/scripts/: injected_api.js
com.judd1.yandex_music.sdPlugin/src/crates/sd-host/: Cargo.toml
com.judd1.yandex_music.sdPlugin/src/crates/sd-host/src/: lib.rs
com.judd1.yandex_music.sdPlugin/src/crates/sd-protocol/: Cargo.toml
com.judd1.yandex_music.sdPlugin/src/crates/sd-protocol/src/: inbound.rs  lib.rs  outbound.rs  pi.rs
com.judd1.yandex_music.sdPlugin/src/crates/ym-cdp/: Cargo.toml  package.json
com.judd1.yandex_music.sdPlugin/src/crates/ym-cdp/assets/: injected_api.js
com.judd1.yandex_music.sdPlugin/src/crates/ym-cdp/src/: commands.rs  controller.rs  discovery.rs  lib.rs
com.judd1.yandex_music.sdPlugin/src/crates/ym-cdp/tests_js/: behavior.test.mjs  contract.test.mjs  inspector.test.mjs  observation.test.mjs  token.test.mjs  vibe.test.mjs
com.judd1.yandex_music.sdPlugin/src/crates/ym-cdp/tests_js/fixtures/: sonata.mjs  vibe.mjs
com.judd1.yandex_music.sdPlugin/src/crates/ym-cdp/tests_js/helpers/: load.mjs
com.judd1.yandex_music.sdPlugin/src/crates/ym-core/: Cargo.toml
com.judd1.yandex_music.sdPlugin/src/crates/ym-core/src/: action.rs  actions.rs  actor.rs  download.rs  lib.rs  names.rs  orchestrator.rs  registry.rs
com.judd1.yandex_music.sdPlugin/src/crates/ym-core/src/actions/: display.rs  download.rs  helpers.rs  likes.rs  test_support.rs  transport.rs  volume.rs
com.judd1.yandex_music.sdPlugin/src/crates/ym-discord/: Cargo.toml
com.judd1.yandex_music.sdPlugin/src/crates/ym-discord/src/: lib.rs
com.judd1.yandex_music.sdPlugin/src/crates/ym-download/: Cargo.toml
com.judd1.yandex_music.sdPlugin/src/crates/ym-download/examples/: bench_convert.rs
com.judd1.yandex_music.sdPlugin/src/crates/ym-download/src/: convert.rs  crypto.rs  decode.rs  ffmpeg.rs  flac_remux.rs  lib.rs  mp3_encode.rs  naming.rs  sign.rs  tag.rs
com.judd1.yandex_music.sdPlugin/src/crates/ym-download/tests/: convert_pipeline.rs  ffmpeg_pipeline.rs
com.judd1.yandex_music.sdPlugin/src/crates/ym-download/tests/fixtures/: silence.flac  silence.m4a
com.judd1.yandex_music.sdPlugin/src/crates/ym-launch/: Cargo.toml
com.judd1.yandex_music.sdPlugin/src/crates/ym-launch/src/: decide.rs  lib.rs  ops.rs  probe.rs  resolve.rs  scan.rs  watcher.rs
com.judd1.yandex_music.sdPlugin/src/crates/ym-model/: Cargo.toml
com.judd1.yandex_music.sdPlugin/src/crates/ym-model/src/: dist.rs  lib.rs  media.rs  ports.rs  result.rs  settings.rs  state_event.rs  time.rs
com.judd1.yandex_music.sdPlugin/src/crates/ym-plugin/: Cargo.toml
com.judd1.yandex_music.sdPlugin/src/crates/ym-plugin/src/: cli.rs  log.rs  main.rs  single_instance.rs
com.judd1.yandex_music.sdPlugin/src/crates/ym-plugin/tests/: features.rs  smoke.rs
com.judd1.yandex_music.sdPlugin/src/crates/ym-render/: Cargo.toml
com.judd1.yandex_music.sdPlugin/src/crates/ym-render/assets/: FONT-LICENSE.md
com.judd1.yandex_music.sdPlugin/src/crates/ym-render/src/: cover.rs  info.rs  lib.rs  progress.rs  text.rs
com.judd1.yandex_music.sdPlugin/src/crates/ym-update/: Cargo.toml
com.judd1.yandex_music.sdPlugin/src/crates/ym-update/src/: lib.rs
com.judd1.yandex_music.sdPlugin/src/crates/ym-ynison/: Cargo.toml
com.judd1.yandex_music.sdPlugin/src/crates/ym-ynison/src/: commands.rs  lib.rs
com.judd1.yandex_music.sdPlugin/src/xtask/: Cargo.toml
com.judd1.yandex_music.sdPlugin/src/xtask/assets/: elgato.json
com.judd1.yandex_music.sdPlugin/src/xtask/src/: elgato.rs  icons.rs  main.rs
com.judd1.yandex_music.sdPlugin/static/: property_inspector.html  token.html
com.judd1.yandex_music.sdPlugin/static/css/: inspector.css  token.css
com.judd1.yandex_music.sdPlugin/static/js/: inspector.js  token.js
com.judd1.yandex_music.sdPlugin/tests/: test_pi_comms.py  test_settings_manager.py
com.judd1.yandex_music.sdPlugin/tools/: build.py  build_ffmpeg_min.sh  build_ffmpeg_win.sh  build_macos.sh  build_windows.bat
python_deprecated/: README.md  run.sh
python_deprecated/src/actions/: __init__.py  info.py  like.py  mute.py  next.py  volume_display.py
python_deprecated/src/core/: action.py  cache.py  plugin.py  settings_manager.py
python_deprecated/src/core/mixins/: router.py
python_deprecated/src/core/renderers/: base.py  info.py
python_deprecated/src/core/schemas/: states.py
python_deprecated/tests/: test_renderers.py  test_routing.py  test_task_mixin.py
