[package]
name = "sd-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sd-protocol.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
