[package]
name = "ym-cdp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ym-model.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
