[package]
name = "ym-download"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["multipart"] }
tokio = { workspace = true, features = ["fs", "process"] }
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
base64.workspace = true
hmac.workspace = true
sha2.workspace = true
aes.workspace = true
ctr.workspace = true
lofty.workspace = true
