[package]
name = "ym-update"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ym-model.workspace = true
tokio = { workspace = true }
tracing.workspace = true
zip.workspace = true
semver.workspace = true
self-replace.workspace = true

[dev-dependencies]
tempfile = "3"
